--- a/BookWeb/BookWeb.csproj
+++ b/BookWeb/BookWeb.csproj
@@ -31,7 +31,9 @@
     <Folder Include="Views\Category\" />
     <Folder Include="Views\Genre\" />
     <Folder Include="Views\Publisher\" />
-    <Folder Include="Views\Login\" />
+    <Folder Include="wwwroot\sweetAlert\" />
+    <Folder Include="Enums\" />
+    <Folder Include="Views\Account\" />
   </ItemGroup>
   
   <ItemGroup>
@@ -44,6 +46,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\css\site.css" />
+    <Content Remove="Views\Author %28copy%29\Create.cshtml" />
+    <Content Remove="Views\Author %28copy%29\Edit.cshtml" />
+    <Content Remove="Views\Author %28copy%29\Index.cshtml" />
   </ItemGroup>
 </Project>
 
