Added Book Relationship

--- a/BookWeb/BookWeb.csproj
+++ b/BookWeb/BookWeb.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Remove="Controllers\AuthorController %28another copy%29.cs" />
     <Compile Remove="Controllers\RoleController %28copy%29.cs" />
+    <Compile Remove="Models\BookWebDataContextModelSnapshot.cs" />
+    <Compile Remove="Migrations\20200708144618_InitialBookRelationship.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\css\site.css" />
